[gd_scene load_steps=9 format=2]

[ext_resource path="res://Solarsystemscope_texture_8k_earth_daymap.jpg" type="Texture" id=1]
[ext_resource path="res://camera.gd" type="Script" id=2]
[ext_resource path="res://ireland.png" type="Texture" id=3]
[ext_resource path="res://kuwait-silhouette-thumbnail.png" type="Texture" id=4]
[ext_resource path="res://tree.png" type="Texture" id=5]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 20.48, 10.24 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 10.24, 5.12, 0.01 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.217356, 0.296428, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.9999
margin_top = -105.0
margin_right = 456.0
margin_bottom = 407.0
rect_min_size = Vector2( 128, 128 )
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 2, 3 )
current = true
fov = 120.0

[node name="Map" type="Sprite3D" parent="."]
texture = ExtResource( 1 )

[node name="ClickableMap" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
visible = false
mesh = SubResource( 1 )

[node name="Area" type="Area" parent="ClickableMap"]
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="ClickableMap/Area"]
shape = SubResource( 2 )

[node name="HoverIreland" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44, 3.04, 0.01 )
visible = false
transparent = false
alpha_cut = 1
texture = ExtResource( 3 )

[node name="HoverKuwait" type="Sprite3D" parent="."]
transform = Transform( 0.31, 0, 0, 0, 0.31, 0, 0, 0, 0.31, 10.889, 6.623, 0.1 )
visible = false
transparent = false
alpha_cut = 1
texture = ExtResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.874, 6.569, 1.36422e-12 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.088, 0.232, 1.36422e-12 )
shape = SubResource( 3 )

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
